# localcode

./: .env.example  .gitignore  ARCHITECTURE.md  LICENSE  README.md  client.py  client.test.py  config.py  config.test.py  config.yaml  llama.cpp.md  logger.py  logger.test.py  logging_callbacks.py  main.py  middleware.md  opencode.json  processor.py  processor.test.py  pyproject.toml  server.py  server.test.py
