[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
litellm = {version = "^1.80.0", extras = ["proxy"]}
pyyaml = "^6.0.0"

[project]
name = "localcode"
version = "0.2.0"
description = "OpenCode middleware server powered by LiteLLM"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10,<3.14"

[project.urls]
Homepage = "https://opencode.ai"
Repository = "https://github.com/sst/opencode"

[project.scripts]
localcode = "main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
